crates/apollo-compiler/test_data/diagnostics/0024_interface_definition_with_duplicate_fields.txt
Error: fields must be unique in a definition
   ╭─[0024_interface_definition_with_duplicate_fields.graphql:6:3]
   │
 6 │   name: String
   │   ──────┬─────  
   │         ╰─────── previous definition of `name` here
 7 │   name: String
   │   ──────┬─────  
   │         ╰─────── `name` redefined here
   │ 
   │ Help: `name` field must only be defined once in this input object definition.
───╯

